[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "new-study-helper"
version = "0.1.0"
description = "AI Study Helper OpenEnv environment"
requires-python = ">=3.10"
dependencies = [
    "openenv-core>=0.2.0",
    "fastapi",
    "uvicorn"
]

[project.scripts]
server = "app:main"
